5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1759_2138.log
== TEST (2019-05-30 10:12:26) 
-- CODE:
from numpy import*

f = input("Sua frase:")

i = 0
c = 0

while(i != len(f)):
	if(h[c] == "a" or "e" or "i" or "u" ):
		d = f.replace(h[c], "")
	c = c+1
	i = i+1
print(d)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:12:37) 
-- CODE:
from numpy import*

f = input("Sua frase:")

i = 0
c = 0

while(i != len(f)):
	if(f[c] == "a" or "e" or "i" or "u" ):
		d = f.replace(h[c], "")
	c = c+1
	i = i+1
print(d)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:12:46) 
-- CODE:
from numpy import*

f = input("Sua frase:")

i = 0
c = 0

while(i != len(f)):
	if(f[c] == "a" or "e" or "i" or "u" ):
		d = f.replace(f[c], "")
	c = c+1
	i = i+1
print(d)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:55) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ""
while(i != len(f)):
	if(f[c] == "a" or "e" or "i" or "o" or "u" ):
		d = f.replace(f[c], "")
	elif(f[c] == "e"):
		d = f.replace(f[c], "")
	elif(f[c] == "i"):
	
print(d)
-- ERROR:
File "XXXX", line 15
    print(d)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:15:04) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ""
while(i != len(f)):
	if(f[c] == "a" or "e" or "i" or "o" or "u" ):
		d = f.replace(f[c], "")
	elif(f[c] == "e"):
		d = f.replace(f[c], "")
	elif(f[c] == "i"):
print(d)
-- ERROR:
File "XXXX", line 14
    print(d)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:15:11) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ""
while(i != len(f)):
	if(f[c] == "a" or "e" or "i" or "o" or "u" ):
		d = f.replace(f[c], "")
	elif(f[c] == "e"):
		d = f.replace(f[c], "")

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:15:33) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ""
while(i != len(f)):
	if(f[c] == "a" or "e" or "i" or "o" or "u" ):
		d = f.replace(f[c], "")
	elif(f[c] == "e"):
		d = f.replace(f[c], "")
	i = i+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:15:41) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ""
while(i != len(f)):
	if(f[c] == "a" or "e" or "i" or "o" or "u" ):
		d = f.replace(f[c], "")
	elif(f[c] == "e"):
		d = f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:11) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ""
while(i != len(f)):
	if(f[c] == "a" ):
		d = f.replace(f[c], "")
	elif(f[c] == "e"):
		d = f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:38) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
while(i != len(f)):
	if(f[c] == "e" ):
		d = f.replace(f[c], "")
	elif(f[c] == "a"):
		d = f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:46) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
while(i != len(f)):
	if(f[c] == "e" ):
		d = f.replace(f[c], "")
	elif(f[c] == "a"):
		d = f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:50) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
while(i != len(f)):
	if(f[c] == "e" ):
		d = f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:18:17) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
while(i != len(f)):
	if(f[c] == "e" ):
		d = f.replace(f[c], "")
	elif(f[c] == "a"):
		d = f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:18:33) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
while(i != len(f)):
	if(f[c] == "e" ):
		d = f.replace(f[c], "")
		elif(f[c] == "a"):
			d = f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
File "XXXX", line 10
    elif(f[c] == "a"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:19:25) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ""
while(i != len(f)):
	if(f[c] == "e" ):
		d =d+ f.replace(f[c], "")
	elif(f[c] == "e" ):
		d =d+ f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:19:41) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ""
while(i != len(f)):
	if(f[c] == "e" ):
		d =d+ f.replace(f[c], "")
	elif(f[c] == "a" ):
		d =d+ f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:36) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
c = 0
d = ["a","e","i","o","u"]
while(i != len(f)):
	if(f[c] == d ):
		d =f.replace(f[c], "")
	i = i+1
	c = c+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:54) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
v = 0 #vogais
d = ""
while(i != len(f)):
	if(f[c] == "a" or "e" or "i" or "o" or "u" ):
		v = v+1
	i = i+1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:06) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
v = 0 #vogais
d = ""
while(i != len(f)):
	if(f[i] == "a" or "e" or "i" or "o" or "u" ):
		v = v+1
	i = i+1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:36) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
v = 0 #vogais
d = ""
while(i != len(f)):
	if(f[i] == "a" or "e" or "i" or "o" or "u" ):
		v = v+1
	i = i+1
	
		print(f[i])
-- ERROR:
File "XXXX", line 13
    print(f[i])
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:42) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
v = 0 #vogais
d = ""
while(i != len(f)):
	if(f[i] == "a" or "e" or "i" or "o" or "u" ):
		v = v+1
	i = i+1
	print(f[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:11) 
-- CODE:
from numpy import*

f = input("Sua frase:").lower()

i = 0
v = 0 #vogais
d = ""
while(i != len(f)):
	if(f[i] == "a" or "e" or "i" or "o" or "u" ):
		v = v+1
	i = i+1
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
